Added technical info page.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -121,6 +121,10 @@ get to.
 
 <p>Try <a href="faq.html">the FAQ</a>.</p>
 
+<p>More technical readers might want to read the
+<a href="technical.html">technical information and current status</a> page.
+</p>
+
 <p style='float: right;'>
 <a href="http://sourceforge.net/projects/zero-install">
 <img width="88" height="31" alt="SF logo"
