--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -57,7 +57,7 @@ and user confusion.
 As far as network bandwidth goes, the worst-case situation is that you
 downloaded the entire archive, which is what you'd have had to do
 anyway. However, by default each file is downloaded on demand. Thus,
-if you want to run a ROX-Lib2 application like Archive, but you don't
+if you want to run a ROX-Lib2 application like Memo, but you don't
 want to read the ROX-Lib2 developer reference documentation then it
 doesn't get downloaded (until you try to access it).
 </p>
@@ -87,13 +87,13 @@ type URIs for them?</h3>
 do it. Like the web, you have links to the URIs, and you use the links
 normally.</p>
 <p>
-For example, having opened the ROX-Filer directory showing Archive in
-the walk-through above, you can drag Archive from the window onto your
+For example, having opened the ROX-Filer directory showing Memo in
+the walk-through above, you can drag Memo from the window onto your
 panel. Now you access it by dragging things to compress to the panel
 icon as usual; no URIs.
 </p><p>
-You could also put it on the pinboard, bookmark the directory, add
-Archive to your Send To menu, or whatever. Web pages can provide the
+You could also put it on the pinboard, bookmark the directory, set
+a keyboard shortcut, or whatever. Web pages can provide the
 URIs in a clickable form (so clicking on a link opens the filer
 window). A 'distribution' could be nothing more than a web page
 listing links to high quality software for a particular audience.
@@ -102,7 +102,7 @@ Finally, if you want to get a newer version, or find related software,
 traditional systems mean you have to try and remember where you got it
 from, or hunt through the documentation. With the URI scheme, just
 select 'Show Location' from the panel menu and the directory
-containing Archive (on the remote server) will be opened.
+containing Memo (on the remote server) will be opened.
 </p>
 
 <h3>What about dial-up users? They don't want on-demand loading when
