Use Memo for example.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -88,9 +88,8 @@ do it. Like the web, you have links to the URIs, and you use the links
 normally.</p>
 <p>
 For example, having opened the ROX-Filer directory showing Memo in
-the walk-through above, you can drag Memo from the window onto your
-panel. Now you access it by dragging things to compress to the panel
-icon as usual; no URIs.
+<a href="install.html">the walk-through</a>, you can drag Memo from the window
+onto your panel. Now you access it by clicking on it's panel icon; no URIs.
 </p><p>
 You could also put it on the pinboard, bookmark the directory, set
 a keyboard shortcut, or whatever. Web pages can provide the
