Give more details about changes.

--- a/htdocs/technical.html
+++ b/htdocs/technical.html
@@ -64,8 +64,9 @@ The changes required were:
 </p>
 
 <ul>
-<li>Configure glib with --prefix=/uri/.../glib/2.2.1/Linux-ix86</li>
-<li>Set PKG_CONFIG_PATH to URI containing .pc files in Makefile.</li>
+<li>Configure glib with --prefix=/uri/.../glib/2.2.1/Linux-i386</li>
+<li>Set PKG_CONFIG_PATH to /uri/.../lib/pkgconfig directory containing .pc
+files in Makefile.</li>
 <li>Pass --rpath option to linker, giving /uri/.../lib directory.</li>
 </ul>
 
