--- a/htdocs/technical.html
+++ b/htdocs/technical.html
@@ -71,7 +71,7 @@ files in Makefile.</li>
 </ul>
 
 <p>
-The CVS version of zero-install also handles downloading using .tgz files
+Version 0.1.6 of zero-install also handles downloading using .tgz files
 a directory at a time (so is much faster than before).
 </p>
 <p>
