--- a/htdocs/install.html
+++ b/htdocs/install.html
@@ -103,14 +103,18 @@ it. For security reasons, it's better not to run the helper as root. Change
 the ownership of the cache directory to the user the helper will run as (either
 your own user, or create a new user specially for the purpose using 'adduser').
 </p>
+
+<div style='text-align: left'>
 <p>
-Note: If you're upgrading from a previous version, you may need to unload
+If you're upgrading from a previous version, you may need to unload
 the lazyfs module at this point:
 </p>
 <pre>
 # <b>umount /uri</b>
 # <b>rmmod lazyfs</b>
 </pre>
+</div>
+
 <p>
 Run this command, replacing 'fred' with your login name, then mount /uri
 (the order is important). Since the helper is not yet running, you won't
