Use real email.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -12,7 +12,7 @@
 <body>
 
 <h1>The Zero Install system</h1>
-<p class='author'>Thomas Leonard &lt;tal197 at users.sf.net&gt;, 2003</p>
+<p class='author'>Thomas Leonard &lt;<a href="mailto:tal197@users.sourceforge.net">tal197@users.sourceforge.net</a>&gt;</p>
 
 <h2>Introduction</h2>
 
