--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -14,6 +14,14 @@
 <h1>The Zero Install system</h1>
 <p class='author'>Thomas Leonard &lt;<a href="mailto:tal197@users.sourceforge.net">tal197@users.sourceforge.net</a>&gt;</p>
 
+<div><h3>News</h3>
+<strong>4-Apr-2003:</strong> XFree86 4.3.0 is now available via Zero Install!
+Everything's under /uri/http/zero-install.sf.net/libs/XFree86/4.3.1/Linux-i386.
+You'll find both the client side stuff (new xterm, etc) there, as well as the
+server side. You'll still need a recent glibc, as it doesn't get that from
+Zero Install.
+</div>
+
 <h2>Introduction</h2>
 
 <p class='q'>What is it?</p>
